@@ -1,3 +1,7 @@
+22 August 2007
++ changed icon image layout a touch to try and make more space.
++ Updated templates/style.css
+
 Version 2.1.1 - 25 July 2007
 --------------------------------------------------------------
 2 Aug 2007
